frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: emt-labs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: angela27/emt-labs-frontend:latest
        ports:
        - containerPort: 80
