frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: emt-labs
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
