postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emt-db
  namespace: emt-labs
spec:
  ports:
    - port: 5432
  selector:
    app: emt-db
