service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
  namespace: emt-labs
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
