ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: emt-labs
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: |
      emt-labs-rewrite-react@kubernetescrd,
      emt-labs-cors-middleware@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: localhost
      http:
        paths:
          - path: /react
            pathType: Prefix
            backend:
              service:
                name: react-app-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-app-service
                port:
                  number: 8080
